--- a/themes/custom/prds/package.json
+++ b/themes/custom/prds/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "@percy/cypress": "^2.3.4",
+    "axe-core": "^4.1.2",
     "cypress": "^6.5.0",
+    "cypress-axe": "^0.12.2",
     "del": "^5.1.0"
   }
 }
