--- a/themes/custom/prds/package.json
+++ b/themes/custom/prds/package.json
@@ -16,6 +16,9 @@
     "gulp-sass": "^4.0.2"
   },
   "devDependencies": {
+    "axe-core": "^4.1.2",
+    "cypress": "^6.6.0",
+    "cypress-axe": "^0.12.2",
     "del": "^5.1.0"
   }
 }
