--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
         "drupal/core-recommended": "^9",
         "drupal/core-vendor-hardening": "^9",
         "drupal/editor_advanced_link": "^1.8",
-        "drupal/google_analytics": "^2.5",
+        "drupal/google_analytics": "^3.1",
         "drupal/health_check": "^1.2",
         "drupal/image_replace": "^1.0",
-        "drupal/linkit": "^5.0",
+        "drupal/linkit": "^6.0@beta",
         "drupal/media_entity_browser": "^2.0",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_source_csv": "^3.4",
