--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,14 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "drupal/core-project-message": true,
+            "drupal/core-vendor-hardening": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
@@ -90,7 +97,7 @@
         },
         "patches": {
             "drupal/cas": {
-                "Drupal 9 compatibility": "https://www.drupal.org/files/issues/2020-06-08/3149982-11.patch"     
+                "Drupal 9 compatibility": "https://www.drupal.org/files/issues/2020-06-08/3149982-11.patch"
             }
         },
         "drupal-core-project-message": {
