--- a/themes/custom/prds/package.json
+++ b/themes/custom/prds/package.json
@@ -20,6 +20,7 @@
     "axe-core": "^4.1.2",
     "cypress": "^6.6.0",
     "cypress-axe": "^0.12.2",
-    "del": "^5.1.0"
+    "del": "^5.1.0",
+    "node-sass": "^8.0.0"
   }
 }
