--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "drupal/migrate_source_csv": "^3.4",
         "drupal/migrate_tools": "^5.0",
         "drupal/pathauto": "^1.8",
-        "drupal/responsive_menu": "^4.4",
+        "drupal/responsive_menu": "^5.0.x-dev",
         "drupal/search_api": "^1.27",
         "drupal/search_api_autocomplete": "^1.3",
         "drush/drush": "^10.3",
@@ -100,6 +100,9 @@
         "patches": {
             "drupal/cas": {
                 "Drupal 9 compatibility": "https://www.drupal.org/files/issues/2020-06-08/3149982-11.patch"
+            },
+            "drupal/responsive_menu": {
+                "mmenu 9 compatibility": "https://www.drupal.org/files/issues/2022-04-12/responsive_menu-3261091-6.patch"
             }
         },
         "drupal-core-project-message": {
