--- a/sites/default/config/views.view.events_home.yml
+++ b/sites/default/config/views.view.events_home.yml
@@ -1209,7 +1209,7 @@ display:
           click_sort_column: value
           type: daterange_custom
           settings:
-            timezone_override: UTC
+            timezone_override: America/New_York
             date_format: 'g:i A'
             separator: '-'
           group_column: value
